<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dice with Friends</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add">New game</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="action_sync">Sync</string>
    <string name="no_games_found">No games found</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logo">Logo</string>
    <string name="title_activity_game">Game</string>
    <string name="official_game_round_format">Official Game Round %d</string>
    <string name="who_would_you_like_to_play_against">Who would you like to play against?</string>
    <string name="new_game_opponent_email_hint">Opponent email</string>
    <string name="my_name_placeholder">My name</string>
    <string name="opponent_name_placeholder">Opponent name</string>
    <string name="my_score_placeholder">My score</string>
    <string name="opponent_score_placeholder">Opponent score</string>
    <string name="game_status_placeholder">New game</string>
    <string name="stop_button">Stop</string>
    <string name="roll_button">Roll</string>
</resources>