<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rosehulman.dicewithfriends.MainActivity" ><item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_add"/>
<item
        android:id="@+id/action_sync"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/action_sync"/>
<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
<item
    android:id="@+id/action_signout"
    android:orderInCategory="110"
    android:showAsAction="never"
    android:title="@string/action_signout"/>
</menu>
